2009-02-12  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Update dependencies, org.junit.

2008-12-17  Andrew Overholt  <overholt@redhat.com>

	* feature.xml: Add tests plugin.

2008-12-16  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Added dependencies and Linux requirement. Added massif tests.

2008-12-11  Andrew Overholt  <overholt@redhat.com>

	* feature.xml: Unpack memcheck.tests plugin after installation.

2008-12-10  Andrew Overholt  <overholt@redhat.com>

	* build.properties: Inital checkin.
	* feature.xml: Likewise.
	* feature.properties: Likewise.
	* epl-v10.html: Likewise.