@@ -59,4 +59,11 @@
          install-size="0"
          version="0.0.0"/>
 
+   <plugin
+         id="org.eclipse.linuxtools.valgrind.cachegrind.tests"
+         download-size="0"
+         install-size="0"
+         version="0.0.0"
+         unpack="false"/>
+
 </feature>
