@@ -1,3 +1,7 @@
+2009-03-13  Andrew Overholt  <overholt@redhat.com>
+
+	* feature.xml: Add cachegrind tests plugin.
+
 2009-02-12  Elliott Baron  <ebaron@redhat.com>
 
 	* feature.xml: Update dependencies, org.junit.
